[package]
name = "stm32-uart-boot"
version = "1.0.0"
edition = "2021"
license = "MPL-2"

[dependencies]
anyhow = "1.0.71"
bitflags = "2.3.2"
clap = { version = "4.3.4", features = ["derive", "wrap_help"] }
enum-map = "2.5.0"
indicatif = "0.17.5"
num-derive = "0.3.3"
num-traits = "0.2.15"
parse_int = "0.6.0"
scopeguard = "1.1.0"
serialport = "4.2.1"
tempfile = "3.6.0"
thiserror = "1.0.49"
